--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 body {
   background: var(--background);
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Ar;
 }
 
 @layer components {
