--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -21,4 +21,8 @@ body {
   .task-button {
     @apply text-base font-[400] min-w-[50%] md:min-w-[18%] bg-white text-[#2d3436] rounded-3xl p-3 mt-4 md:mt-0 hover:opacity-80 active:translate-y-0.5 transition-all duration-200 shadow-md shadow-[#2d3436] cursor-pointer disabled:opacity-40;
   }
+
+  .modal-button {
+    @apply bg-white/100 rounded-xl p-3 md:min-w-[10vw] min-w-[30vw] font-[400] hover:scale-[103%] hover:bg-white/60 cursor-pointer transition-all duration-200 shadow-xs;
+  }
 }
