error handling in API, a bit of code organizing, token save to DB logic, useMintNFT hook based on react query, mint modal content significant refactor (replaced fetch in useEffect with useQuery, removed all useStates and useEffects)

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -23,6 +23,6 @@ body {
   }
 
   .modal-button {
-    @apply bg-white/100 rounded-xl p-3 md:min-w-[10vw] min-w-[30vw] font-[400] hover:scale-[103%] hover:bg-white/60 cursor-pointer transition-all duration-200 shadow-xs;
+    @apply bg-white/100 rounded-xl p-3 md:min-w-[10vw] min-w-[30vw] font-[400] hover:scale-[103%] hover:bg-white/60 cursor-pointer transition-all duration-200 shadow-xs disabled:opacity-40;
   }
 }
